Fixed some inconsistencies with usage layout